--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,8 @@
     <div class="text-center">
       <h1>The Hockey Camp Index</h1>
       <p>Find the place that lives in your dreams and <br>pass it on by rating and commenting</p>
+      <hr>
+      <p>My favorite camp is: "<%=camps[0].name%>"</p>
     </div>
 
     <!-- Separate Popper and Bootstrap JS -->
