--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,14 +8,38 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/home.css">
-    <title>Hockey Camp Index</title>
+    <title>Hockey Camp Home</title>
   </head>
   <body>
+    <nav class="navbar navbar-light bg-secondary">
+      <div class="container-fluid">
+        <a href="/" class="navbar-brand">
+          <img width="40" height="40" src="https://static.wikia.nocookie.net/logopedia/images/1/18/National_hockey_league-primary-1918.svg/revision/latest?cb=20200518132603" alt="" class="d-inline-block align-text-center">
+          HOME
+        </a>
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button> -->
+        <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
+          <!-- <ul class="navbar-nav"> -->
+              <div class="d-flex d-inline-block">
+              <a class="nav-link text-dark active" aria-current="page" href="/camps">Index</a>
+              <a class="nav-link text-dark" href="#">About</a>
+<!--               <a class="nav-link text-dark" href="#">Login</a>
+              <a class="nav-link text-dark" href="#">Logout</a>
+              <a class="nav-link text-dark" href="#">Register</a> -->
+              </div>
+          <!-- </ul> -->
+        <!-- </div> -->
+      </div>
+    </nav>
+
     <div class="text-center">
-      <h1>The Hockey Camp Index</h1>
+      <h1>The Hockey Camp Home</h1>
       <p>Find the place that lives in your dreams and <br>pass it on by rating and commenting</p>
       <hr>
       <p>My favorite camp is: "<%=camps[0].name%>"</p>
+      <a href="/camps" class="btn btn-dark" type="button">All Camps</a>
     </div>
 
     <!-- Separate Popper and Bootstrap JS -->
