--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,5 +29,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     
+
+
+    <script>
+      const pgs = Math.ceil(`<%=camps.length%>`/3);
+      
+      console.log(`<%=camps[0].pics[0]%>`);
+    </script>
   </body>
 </html>
+
+
+
+<!-- num of pages, each page w/ 3 pics
+state = page number
+setup listener to next & previous -->
