register view + form + route

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,9 +25,9 @@
               <div class="d-flex d-inline-block">
               <a class="nav-link text-dark active" aria-current="page" href="/camps">Index</a>
               <a class="nav-link text-dark" href="#">About</a>
-<!--               <a class="nav-link text-dark" href="#">Login</a>
-              <a class="nav-link text-dark" href="#">Logout</a>
-              <a class="nav-link text-dark" href="#">Register</a> -->
+              <!-- <a class="nav-link text-dark" href="#">Login</a> -->
+              <!-- <a class="nav-link text-dark" href="#">Logout</a> -->
+              <a class="nav-link text-dark" href="/register">Register</a>
               </div>
           <!-- </ul> -->
         <!-- </div> -->
